Fix some layout issues with navbar and why/how on index

--- a/home/static/home/css/index.css
+++ b/home/static/home/css/index.css
@@ -1,13 +1,11 @@
-/* let text flow partial over hero image*/
-/* #intro {
-    position: absolute;
-    bottom: 1rem;
-    width: 100vw;
-} */
+#intro {
+    padding-left: 0;
+    padding-right: 0;
+}
 .intro-text {
-    font-size: 2rem;
+    font-size: 1rem;
     color: #15020a;
-    background-color: #fff;
+    /* background: rgba(126, 37, 59, 0.315); */
 }
 #about {
     /* position: absolute; */
@@ -16,16 +14,16 @@
 }
 #why {
     background-image: url("../../../media/backgrounds/why.jpg");
-    height: 40vh;
-    width: auto;
+    height: 25vh;
+    width: 100vw;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 #how {
     background-image: url("../../../media/backgrounds/how.jpg");
-    height: 40vh;
-    width: auto;
+    height: 25vh;
+    width: 100vw;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -35,9 +33,11 @@
     align-items: center;
     padding: 1rem 1rem;
     justify-content: center;
-    height: 40vh;
-    width: auto;
-    font-size: 6rem;
+    margin-top: 4rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    height: 10vh;
+    font-size: 2.4rem;
     color: #580c2d;
     background: rgba(255, 255, 255, 0.2);
 }
